welcome.lessons.welcome.environment.Environment.scala.error
SourceCode:1: error: identifier expected but '(' found.
type(3)
    ^